# rainnet

./: .gitignore  predict_model.py  prediction_test.hdf5  pyproject.toml  train_model.py
callbacks/: __init__.py  log_nowcast_callback.py  nowcast_metrics_callback.py
chat/: Explaining Loss Functions.md  FMI元数据.md
chat/pysteps/: 1.md
config/example/: FMIComposite.yaml  rainnet.yaml
config/gpu/: FMIComposite.yaml  rainnet.yaml
datamodules/: __init__.py
datamodules/RainNet/: FMICompositeDataModule.py
datasets/RainNet/: FMIComposite.py
datelists/: fmi_rainy_days_bbox_test.txt  fmi_rainy_days_bbox_train.txt  fmi_rainy_days_bbox_valid.txt
models/RainNet/: RainNet.py
utils/: prediction_writers.py  radar_image_plots.py
verification/pincast_verif/: io_tools.py
verification/scripts/: tif2hdf5.py
verification/test/: check_crop.py  plot_extrapolation_nowcast.ipynb  pystepsrc  test_base.ipynb  test_dm.py
