[project]
authors = [{ name = "zt", email = "zt@wsl.com" }]
dependencies = []
name = "rainnet"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.hatch.build.targets.wheel]
packages = [
    "callbacks",
    "costfunctions",
    "datasets",
    "models",
    "utils",
    "visualization",
    "networks",
    "metrics",
    "datamodules",
]

[tool.pixi.feature.gpu]
channels = ["nvidia", "pytorch", "conda-forge"]
system-requirements = { cuda = "12.4" }

[tool.pixi.feature.gpu.dependencies]
# pytorch-cuda = "11.8.*"
# cuda-version = "11.8.*"
pytorch-gpu = ">=2.5.1,<3"
torchvision = "==0.20.1"

[tool.pixi.environments]
gpu = ["gpu"]

[tool.pixi.pypi-dependencies]
rainnet = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
lightning = ">=2.6.0,<3"
pysteps = ">=1.19.1,<2"
python = "==3.11.13"
ipykernel = ">=7.1.0,<8"
ipywidgets = ">=8.1.8,<9"
pandas = ">=3.0.0,<4"
scikit-image = ">=0.26.0,<0.27"
h5py = ">=3.15.1,<4"
pyprojroot = ">=0.3.0,<0.4"
gdal = ">=3.12.0,<4"
attrdict3 = ">=2.0.2,<3"
arm_pyart = ">=2.2.0,<3"
seaborn = ">=0.13.2,<0.14"
tensorboard = ">=2.20.0,<3"
